--- a/test.ipynb
+++ b/test.ipynb
@@ -2,9 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import Tetris \n",
     "import pygame"
@@ -85,112 +134,449 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "colors = [\n",
+    "    (0, 0, 0),\n",
+    "    (120, 37, 179),\n",
+    "    (100, 179, 179),\n",
+    "    (80, 34, 22),\n",
+    "    (80, 134, 22),\n",
+    "    (180, 34, 22),\n",
+    "    (180, 34, 122),\n",
+    "]\n",
+    "\n",
+    "pygame.init()\n",
+    "\n",
+    "# Define some colors\n",
+    "BLACK = (0, 0, 0)\n",
+    "WHITE = (255, 255, 255)\n",
+    "GRAY = (128, 128, 128)\n",
+    "\n",
+    "size = (400, 500)\n",
+    "screen = pygame.display.set_mode(size)\n",
+    "\n",
+    "pygame.display.set_caption(\"Tetris\")\n",
+    "\n",
+    "# Loop until the user clicks the close button.\n",
+    "done = False\n",
+    "clock = pygame.time.Clock()\n",
+    "fps = 25\n",
+    "game = Tetris.Tetris(20, 10)\n",
+    "counter = 0\n",
+    "\n",
+    "#pressing_down = False\n",
+    "\n",
+    "while not done:\n",
+    "    if game.figure is None:\n",
+    "        game.new_figure()\n",
+    "    counter += 1\n",
+    "    if counter > 100000:\n",
+    "        counter = 0\n",
+    "\n",
+    "    #if  pressing_down:\n",
+    "    #    if game.state == \"start\":\n",
+    "    \n",
+    "\n",
+    "    #for event in pygame.event.get():\n",
+    "    #    if event.type == pygame.QUIT:\n",
+    "    #        done = True\n",
+    "    #    if event.type == pygame.KEYDOWN:\n",
+    "    #        if event.key == pygame.K_UP: #flèche du haut pour tourner la pièce \n",
+    "    #            game.rotate()\n",
+    "    #        if event.key == pygame.K_DOWN: #flèche du bas pour aller un cran en bas \n",
+    "    #            pressing_down = True\n",
+    "    #        if event.key == pygame.K_LEFT: #flèche droite pour aller à droite \n",
+    "    #            game.go_side(-1)\n",
+    "    #        if event.key == pygame.K_RIGHT: #flèche gauche pour aller à gauche \n",
+    "    #            game.go_side(1)\n",
+    "    #        if event.key == pygame.K_SPACE: #barre espace pour aller en bas \n",
+    "    #            game.go_space()\n",
+    "    #        if event.key == pygame.K_ESCAPE: \n",
+    "    #            game.__init__(20, 10)\n",
+    "\n",
+    "    #if event.type == pygame.KEYUP:\n",
+    "    #        if event.key == pygame.K_DOWN:\n",
+    "    #            pressing_down = False\n",
+    "\n",
+    "    screen.fill(WHITE)\n",
+    "\n",
+    "    for i in range(game.height):\n",
+    "        for j in range(game.width):\n",
+    "            pygame.draw.rect(screen, GRAY, [game.x + game.zoom * j, game.y + game.zoom * i, game.zoom, game.zoom], 1)\n",
+    "            if game.field[i][j] > 0:\n",
+    "                pygame.draw.rect(screen, colors[game.field[i][j]],\n",
+    "                                 [game.x + game.zoom * j + 1, game.y + game.zoom * i + 1, game.zoom - 2, game.zoom - 1])\n",
+    "\n",
+    "    if game.figure is not None:\n",
+    "        for i in range(4):\n",
+    "            for j in range(4):\n",
+    "                p = i * 4 + j\n",
+    "                if p in game.figure.image():\n",
+    "                    pygame.draw.rect(screen, colors[game.figure.color],\n",
+    "                                     [game.x + game.zoom * (j + game.figure.x) + 1,\n",
+    "                                      game.y + game.zoom * (i + game.figure.y) + 1,\n",
+    "                                      game.zoom - 2, game.zoom - 2])\n",
+    "\n",
+    "    font = pygame.font.SysFont('Calibri', 25, True, False)\n",
+    "    font1 = pygame.font.SysFont('Calibri', 65, True, False)\n",
+    "    text = font.render(\"Score: \" + str(game.score), True, BLACK)\n",
+    "    text_game_over = font1.render(\"Game Over\", True, (255, 125, 0))\n",
+    "    text_game_over1 = font1.render(\"Press ESC\", True, (255, 215, 0))\n",
+    "\n",
+    "    screen.blit(text, [0, 0])\n",
+    "    if game.state == \"gameover\":\n",
+    "        screen.blit(text_game_over, [20, 200])\n",
+    "        screen.blit(text_game_over1, [25, 265])\n",
+    "\n",
+    "    pygame.display.flip()\n",
+    "    clock.tick(fps)\n",
+    "\n",
+    "    print()\n",
+    "\n",
+    "pygame.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    \n",
-    "colors = [\n",
-    "(0, 0, 0),\n",
-    "(120, 37, 179),\n",
-    "(100, 179, 179),\n",
-    "(80, 34, 22),\n",
-    "(80, 134, 22),\n",
-    "(180, 34, 22),\n",
-    "]\n",
+    "game = Tetris.Tetris(20, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game = Tetris.Tetris(20, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.field"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'image'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/54/ygl2prm92g7c7p73tl2p1y5w0000gn/T/ipykernel_12698/3402705023.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnew_figure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'image'"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "\n",
-    "\n",
-    "def get_simulation(): #W=[w1, ..., w21] vector of parameters to tune \n",
-    "    game = Tetris.Tetris(20, 10)\n",
-    "\n",
-    "    pygame.init()\n",
-    "\n",
-    "    # Define some colors\n",
-    "    BLACK = (0, 0, 0)\n",
-    "    WHITE = (255, 255, 255)\n",
-    "    GRAY = (128, 128, 128)\n",
-    "\n",
-    "    size = (400, 500)\n",
-    "    screen = pygame.display.set_mode(size)\n",
-    "\n",
-    "    pygame.display.set_caption(\"Tetris\")\n",
-    "\n",
-    "    # Loop until the user clicks the close button.\n",
-    "    done = False\n",
-    "    clock = pygame.time.Clock()\n",
-    "    fps = 25\n",
-    "    game = Tetris.Tetris(20, 10)\n",
-    "    counter = 0\n",
-    "\n",
-    "    pressing_down = False\n",
-    "\n",
-    "    while not done:\n",
-    "        if game.figure is None:\n",
-    "            game.new_figure()\n",
-    "        counter += 1\n",
-    "\n",
-    "        if  pressing_down:\n",
-    "            if game.state == \"start\":\n",
-    "                game.go_down()\n",
-    "\n",
-    "        for event in pygame.event.get():\n",
-    "            if event.type == pygame.QUIT:\n",
-    "                done = True\n",
-    "            if event.type == pygame.KEYDOWN:\n",
-    "                if event.key == pygame.K_UP: #flèche du haut pour tourner la pièce \n",
-    "                    game.rotate()\n",
-    "                if event.key == pygame.K_DOWN: #flèche du bas pour aller un cran en bas \n",
-    "                    pressing_down = True\n",
-    "                if event.key == pygame.K_LEFT: #flèche droite pour aller à droite \n",
-    "                    game.go_side(-1)\n",
-    "                if event.key == pygame.K_RIGHT: #flèche gauche pour aller à gauche \n",
-    "                    game.go_side(1)\n",
-    "                if event.key == pygame.K_SPACE: #barre espace pour aller en bas \n",
-    "                    game.go_space()\n",
-    "                if event.key == pygame.K_ESCAPE: \n",
-    "                    game.__init__(20, 10)\n",
-    "\n",
-    "        if event.type == pygame.KEYUP:\n",
-    "                if event.key == pygame.K_DOWN:\n",
-    "                    pressing_down = False\n",
-    "\n",
-    "        screen.fill(WHITE)\n",
-    "\n",
-    "        for i in range(game.height):\n",
-    "            for j in range(game.width):\n",
-    "                pygame.draw.rect(screen, GRAY, [game.x + game.zoom * j, game.y + game.zoom * i, game.zoom, game.zoom], 1)\n",
-    "                if game.field[i][j] > 0:\n",
-    "                    pygame.draw.rect(screen, colors[game.field[i][j]],\n",
-    "                                    [game.x + game.zoom * j + 1, game.y + game.zoom * i + 1, game.zoom - 2, game.zoom - 1])\n",
-    "\n",
-    "        if game.figure is not None:\n",
-    "            for i in range(4):\n",
-    "                for j in range(4):\n",
-    "                    p = i * 4 + j\n",
-    "                    if p in game.figure.image():\n",
-    "                        pygame.draw.rect(screen, colors[game.figure.color],\n",
-    "                                        [game.x + game.zoom * (j + game.figure.x) + 1,\n",
-    "                                        game.y + game.zoom * (i + game.figure.y) + 1,\n",
-    "                                        game.zoom - 2, game.zoom - 2])\n",
-    "\n",
-    "        font = pygame.font.SysFont('Calibri', 25, True, False)\n",
-    "        font1 = pygame.font.SysFont('Calibri', 65, True, False)\n",
-    "        text = font.render(\"Score: \" + str(game.score), True, BLACK)\n",
-    "        text_game_over = font1.render(\"Game Over\", True, (255, 125, 0))\n",
-    "        text_game_over1 = font1.render(\"Press ESC\", True, (255, 215, 0))\n",
-    "\n",
-    "        screen.blit(text, [0, 0])\n",
-    "        if game.state == \"gameover\":\n",
-    "            screen.blit(text_game_over, [20, 200])\n",
-    "            screen.blit(text_game_over1, [25, 265])\n",
-    "\n",
-    "        pygame.display.flip()\n",
-    "        clock.tick(fps)\n",
-    "\n",
-    "        print()\n",
-    "\n",
-    "    pygame.quit()\n"
+    "print(game.new_figure().image)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[1, 5, 9, 13], [4, 5, 6, 7]],\n",
+       " [[4, 5, 9, 10], [2, 6, 5, 9]],\n",
+       " [[6, 7, 9, 10], [1, 5, 6, 10]],\n",
+       " [[1, 2, 5, 9], [0, 4, 5, 6], [1, 5, 9, 8], [4, 5, 6, 10]],\n",
+       " [[1, 2, 6, 10], [5, 6, 7, 9], [2, 6, 10, 11], [3, 5, 6, 7]],\n",
+       " [[1, 4, 5, 6], [1, 4, 5, 9], [4, 5, 6, 9], [1, 5, 6, 9]],\n",
+       " [[1, 2, 5, 6]]]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Tetris.Figure.figures"
    ]
   }
  ],
