--- a/Tetris_modified.ipynb
+++ b/Tetris_modified.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
     "import random\n"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +55,8 @@
     "    def number_rotation(self):\n",
     "        return(len(self.figures[self.type]))\n",
     "\n",
-    "    def rotate(self):\n",
-    "        self.rotation = (self.rotation + 1) % len(self.figures[self.type])\n",
+    "    def rotate(self,k):\n",
+    "        self.rotation = (self.rotation + k) % len(self.figures[self.type])\n",
     "\n",
     "\n",
     "class Tetris:\n",
@@ -93,8 +84,8 @@
     "                new_line.append(0)\n",
     "            self.field.append(new_line)\n",
     "\n",
-    "    def new_figure(self,type,color):\n",
-    "        self.figure = Figure(3, 0,type,color) #type et color doivent être randomisés\n",
+    "    def new_figure(self,type,x,y):\n",
+    "        self.figure = Figure(x, y,type,color=2) #type et color doivent être randomisés\n",
     "\n",
     "    def intersects(self): #check if the currently flying figure intersecting with something fixed on the field. \n",
     "        intersection = False\n",
@@ -107,6 +98,8 @@
     "                            self.field[i + self.figure.y][j + self.figure.x] > 0:\n",
     "                        intersection = True\n",
     "        return intersection\n",
+    "\n",
+    "\n",
     "\n",
     "    def break_lines(self): #checking an detroying full lines\n",
     "        lines = 0\n",
@@ -134,7 +127,7 @@
     "                if i * 4 + j in self.figure.image():\n",
     "                    self.field[i + self.figure.y][j + self.figure.x] = self.figure.color\n",
     "        self.break_lines()\n",
-    "        self.new_figure()\n",
+    "        #self.new_figure()\n",
     "        if self.intersects():\n",
     "            self.state = \"gameover\"\n",
     "\n",
@@ -144,9 +137,9 @@
     "        if self.intersects():\n",
     "            self.figure.x = old_x\n",
     "\n",
-    "    def rotate(self):\n",
+    "    def rotate(self,k):\n",
     "        old_rotation = self.figure.rotation\n",
-    "        self.figure.rotate()\n",
+    "        self.figure.rotate(k)\n",
     "        if self.intersects():\n",
     "            self.figure.rotation = old_rotation\n",
     "\n",
@@ -155,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,40 +214,39 @@
     "    for k in range (len(dh)):\n",
     "        S2+=dh[k]*W[10+k]\n",
     "\n",
-    "    S3=W[19]\n",
+    "    S3=W[19]*L\n",
     "\n",
-    "    S4=W[20]\n",
+    "    S4=W[20]*H\n",
     "\n",
     "    return(S1+S2+S3+S4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_best_move(field,type):\n",
-    "\n",
+    "import copy \n",
+    "def evaluate_best_move(W,field,type):\n",
     "    L=[]\n",
     "    score=[]\n",
-    "    for colonne in range (10):\n",
-    "        game_copy=Tetris(20,10)\n",
-    "        game_copy.field=field\n",
+    "    for col in range (-2,10):\n",
+    "        for k in range (4):\n",
+    "            game_copy=Tetris(20,10)\n",
+    "            \n",
+    "            game_copy.field=copy.deepcopy(field)\n",
     "\n",
-    "        if game_copy.intersects(type,colonne,0)==False:\n",
-    "            game_copy.new_figure(type,colonne,0)\n",
-    "            for k in range (4):\n",
-    "                game_copy.rotate()\n",
-    "                game_copy.go_space()\n",
-    "\n",
-    "                score.append(evaluate(W,field))\n",
-    "                \n",
-    "\n",
-    "\n",
-    "\n",
-    "        \n",
-    "\n",
+    "            game_copy.new_figure(type,0,0)\n",
+    "            \n",
+    "            game_copy.go_side(col)\n",
+    "            game_copy.rotate(k) #test intersect deja fait dans la methode rotate\n",
+    "            game_copy.go_space()\n",
+    "            score.append(evaluate(W,game_copy.field))\n",
+    "            L.append([col,k])\n",
+    "    \n",
+    "    best_move=score.index(min(score))\n",
+    "    return(L[best_move])\n",
     "\n",
     "    \n",
     "    "
