--- a/Tests/A_Tetris_final.ipynb
+++ b/Tests/A_Tetris_final.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pygame\n",
-    "import random\n"
+    "import numpy\n",
+    "import random\n",
+    "import copy "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,16 +53,19 @@
     "    def image(self):\n",
     "        return self.figures[self.type][self.rotation]\n",
     "\n",
-    "    def number_rotation(self):\n",
-    "        return(len(self.figures[self.type]))\n",
-    "\n",
     "    def rotate(self,k):\n",
     "        self.rotation = (self.rotation + k) % len(self.figures[self.type])\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Tetris:\n",
     "    def __init__(self, height, width):\n",
-    "        self.level = 2\n",
     "        self.score = 0\n",
     "        self.state = \"start\" #tell us if we are still playing or not\n",
     "        self.field = []\n",
@@ -69,7 +73,6 @@
     "        self.width = 0\n",
     "        self.x = 100\n",
     "        self.y = 60\n",
-    "        self.zoom = 20\n",
     "        self.figure = None\n",
     "    \n",
     "        self.height = height\n",
@@ -80,8 +83,10 @@
     "\n",
     "        for i in range(height): # create a field with the size height x width \n",
     "            new_line = []\n",
+    "\n",
     "            for j in range(width):\n",
     "                new_line.append(0)\n",
+    "                \n",
     "            self.field.append(new_line)\n",
     "\n",
     "    def new_figure(self,type,x,y):\n",
@@ -127,9 +132,6 @@
     "                if i * 4 + j in self.figure.image():\n",
     "                    self.field[i + self.figure.y][j + self.figure.x] = self.figure.color\n",
     "        self.break_lines()\n",
-    "        #self.new_figure()\n",
-    "        if self.intersects():\n",
-    "            self.state = \"gameover\"\n",
     "\n",
     "    def go_side(self, dx):\n",
     "        old_x = self.figure.x\n",
@@ -141,9 +143,7 @@
     "        old_rotation = self.figure.rotation\n",
     "        self.figure.rotate(k)\n",
     "        if self.intersects():\n",
-    "            self.figure.rotation = old_rotation\n",
-    "\n",
-    "\n"
+    "            self.figure.rotation = old_rotation\n"
    ]
   },
   {
@@ -223,21 +223,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy \n",
+    "\n",
     "def evaluate_best_move(W,field,type):\n",
     "    L=[]\n",
     "    score=[]\n",
-    "    for col in range (-2,10):\n",
+    "    for col in range (-5,7):\n",
     "        for k in range (4):\n",
     "            game_copy=Tetris(20,10)\n",
     "            \n",
     "            game_copy.field=copy.deepcopy(field)\n",
     "\n",
-    "            game_copy.new_figure(type,0,0)\n",
+    "            game_copy.new_figure(type,3,0)\n",
     "            \n",
     "            game_copy.go_side(col)\n",
     "            game_copy.rotate(k) #test intersect deja fait dans la methode rotate\n",
@@ -250,6 +250,132 @@
     "\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulation(W):\n",
+    "    # Initialize the game engine\n",
+    "    pygame.init()\n",
+    "\n",
+    "    # Define some colors\n",
+    "    BLACK = (0, 0, 0)\n",
+    "    WHITE = (255, 255, 255)\n",
+    "    GRAY = (128, 128, 128)\n",
+    "\n",
+    "    size = (400, 500)\n",
+    "    screen = pygame.display.set_mode(size)\n",
+    "\n",
+    "    pygame.display.set_caption(\"Tetris\")\n",
+    "\n",
+    "    # Loop until the user clicks the close button.\n",
+    "    done = False\n",
+    "    clock = pygame.time.Clock()\n",
+    "    fps = 25\n",
+    "    game = Tetris(20, 10)\n",
+    "    counter = 0\n",
+    "\n",
+    "    while not done:\n",
+    "        if game.figure is None:\n",
+    "            fig=random.randint(0,6)\n",
+    "            game.new_figure(fig,3,0) \n",
+    "        counter += 1\n",
+    "\n",
+    "        if counter > 100000:\n",
+    "            counter = 0\n",
+    "            \n",
+    "        game.state = \"start\"\n",
+    "\n",
+    "        while game.state != \"gameover\":\n",
+    "            fig=random.randint(0,6)\n",
+    "            game.new_figure(fig,3,0)\n",
+    "            if game.intersects()==True:\n",
+    "                game.state=\"gameover \"\n",
+    "            counter += 1\n",
+    "                #  if counter > 100000:\n",
+    "                #     counter = 0\n",
+    "            col, rot = evaluate_best_move(W,game.field,fig)\n",
+    "            \n",
+    "            game.rotate(rot)\n",
+    "            \n",
+    "            game.go_side(col)\n",
+    "            game.go_space()\n",
+    "                    \n",
+    "            \n",
+    "       # if event.type == pygame.KEYUP:\n",
+    "       #         if event.key == pygame.K_DOWN:\n",
+    "       #             pressing_down = False\n",
+    "\n",
+    "        screen.fill(WHITE)\n",
+    "\n",
+    "        for i in range(game.height):\n",
+    "            for j in range(game.width):\n",
+    "                pygame.draw.rect(screen, GRAY, [game.x + game.zoom * j, game.y + game.zoom * i, game.zoom, game.zoom], 1)\n",
+    "                if game.field[i][j] > 0:\n",
+    "                    pygame.draw.rect(screen, colors[game.field[i][j]],\n",
+    "                                     [game.x + game.zoom * j + 1, game.y + game.zoom * i + 1, game.zoom - 2, game.zoom - 1])\n",
+    "\n",
+    "        if game.figure is not None:\n",
+    "            for i in range(4):\n",
+    "                for j in range(4):\n",
+    "                    p = i * 4 + j\n",
+    "                    if p in game.figure.image():\n",
+    "                        pygame.draw.rect(screen, colors[game.figure.color],\n",
+    "                                         [game.x + game.zoom * (j + game.figure.x) + 1,\n",
+    "                                          game.y + game.zoom * (i + game.figure.y) + 1,\n",
+    "                                          game.zoom - 2, game.zoom - 2])\n",
+    "\n",
+    "        font = pygame.font.SysFont('Calibri', 25, True, False)\n",
+    "        font1 = pygame.font.SysFont('Calibri', 65, True, False)\n",
+    "        text = font.render(\"Score: \" + str(game.score), True, BLACK)\n",
+    "        text_game_over = font1.render(\"Game Over\", True, (255, 125, 0))\n",
+    "        text_game_over1 = font1.render(\"Press ESC\", True, (255, 215, 0))\n",
+    "\n",
+    "        screen.blit(text, [0, 0])\n",
+    "        if game.state == \"gameover\":\n",
+    "            screen.blit(text_game_over, [20, 200])\n",
+    "            screen.blit(text_game_over1, [25, 265])\n",
+    "\n",
+    "        pygame.display.flip()\n",
+    "        clock.tick(fps)\n",
+    "\n",
+    "        print()\n",
+    "\n",
+    "    pygame.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulation_without_graphic(W):\n",
+    "\n",
+    "\n",
+    "    game = Tetris(20, 10)\n",
+    "    counter = 0\n",
+    "\n",
+    "    while game.state!=\"gameover\":\n",
+    "\n",
+    "        fig=random.randint(0,6)\n",
+    "        game.new_figure(fig,3,0)\n",
+    "        if game.intersects():\n",
+    "            game.state=\"gameover\"\n",
+    "\n",
+    "        col, rot = evaluate_best_move(W,game.field,fig)\n",
+    "        \n",
+    "        game.rotate(rot)\n",
+    "        game.go_side(col)\n",
+    "        game.go_space()\n",
+    "\n",
+    "            \n",
+    "    return(game.score)\n",
+    "\n"
    ]
   }
  ],
