--- a/main.ipynb
+++ b/main.ipynb
@@ -26,10 +26,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L_plot_CE,params_CE=CE_method.simulation_CE(alpha=0.9,N_mean=30,N_iteration=10,rho=10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialisation"
+    "# II) Cross-entropy with noise\n",
+    "## Constant noise "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L_plot_CECN,params_CECN=CE_method_with_noise.simulation_CE_const_noise(alpha=0.9,N_mean=30,N_iteration=10,rho=10,noise=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decreasing noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L_plot_CEDN, params_CEDN=CE_method_with_noise.simulation_CE_deacr_noise(alpha=0.9,N_mean=30,N_iteration=10,rho=10,a=5,b=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# III) Simulated annealing"
    ]
   },
   {
